public class Spider extends Creature{
    public void pull(){
        System.out.println("Spiders pull the spider web");
    }
}
